--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "bin": "dist/index.js",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rm -rf dist && mkdir dist && tsc"
+    "build": "tsc",
+    "start": "node ./dist"
   },
   "devDependencies": {
     "@types/debug": "^4.1.2",
     "@types/node": "^10.12.18",
     "@types/web3": "^1.0.14",
-    "loom-js": "^1.38.4",
+    "loom-js": "github:loomnetwork/loom-js#build-files-ed",
     "prettier": "^1.15.3",
     "typescript": "^3.2.2",
     "web3": "^1.0.0-beta.37"
