--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "devDependencies": {
     "@types/node": "^10.12.18",
     "@types/web3": "^1.0.14",
-    "loom-js": "^1.38.4",
     "prettier": "^1.15.3",
     "typescript": "^3.2.2",
     "web3": "^1.0.0-beta.37"
+  },
+  "dependencies": {
+    "loom-js": "1.59.1"
   }
 }
